1.5/be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-service
spec:
  selector:
    app: be-multitool
  ports:
    - name: multitool
      protocol: TCP
      port: 80
      targetPort: 8080
