1.5/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-service
spec:
  selector:
    app: fe-nginx
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
